--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,7 +4,6 @@
     justify-content: center;
     min-width: 100px;
     padding: 9px 16px;
-    padding: 9px 16px;
     font-size: 1.6rem;
     font-weight: 700;
     border-radius: 4px;
@@ -27,6 +26,12 @@
 .icon + .title,
 .title + .icon {
     margin-left: 8px;
+}
+
+.icon {
+    display: inline-block;
+    width: 24px;
+    text-align: center;
 }
 
 // Button types
