--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -5,11 +5,13 @@
     --primary: #ff3b5c;
 
     // Default layout
-    --default-layout-header-height: 60px;
-    --default-layout-width-content: 1150px;
     --black: #000;
     --white: #fff;
-    --text-color: #333;
+    --text-color: #16151f;
+
+    --default-layout-width-content: 1150px;
+    --default-layout-width-horizontal-spacer: 24px;
+    --default-layout-header-height: 60px;
 }
 
 * {
@@ -41,4 +43,29 @@ input,
 a[href] {
     color: var(--text-color);
     text-decoration: none;
+}
+
+// Custom tippy tooltips
+
+body {
+    .tippy-box {
+        border-radius: 8px;
+        font-weight: 400;
+        font-size: 1.4rem;
+        line-height: 1.6rem;
+        background-color: rgba(84, 84, 84, 0.92);
+        color: rgb(255, 255, 255);
+    }
+    .tippy-arrow {
+        width: 16px;
+        height: 16px;
+        color: rgba(84, 84, 84, 0.92);
+    }
+    .tippy-box[data-placement^='bottom'] > .tippy-arrow {
+        top: -1px;
+    }
+
+    .tippy-content {
+        padding: 8px 9px;
+    }
 }
