--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -6,6 +6,7 @@
 
 .container {
     width: var(--default-layout-width-content);
+    padding: 0 var(--default-layout-width-horizontal-spacer);
     min-height: 1000px;
     display: flex;
 }
