--- a/src/components/Layout/components/Header/header.module.scss
+++ b/src/components/Layout/components/Header/header.module.scss
@@ -14,6 +14,7 @@
 .inner {
     height: 100%;
     width: var(--default-layout-width-content);
+    padding: 0 var(--default-layout-width-horizontal-spacer);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -95,4 +96,34 @@
     &:active {
         background: rgba(22, 24, 35, 0.06);
     }
+}
+
+//  Action
+.actions {
+    display: flex;
+    align-items: center;
+}
+
+.action-btn {
+    font-size: 2rem;
+    color: #161823;
+    background-color: transparent;
+    padding: 4px 12px;
+    cursor: pointer;
+}
+
+.more-btn {
+    font-size: 2rem;
+    margin-left: 28px;
+    padding: 4px 8px;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.user-avatar {
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 50%;
+    cursor: pointer;
 }
