--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -1,5 +1,4 @@
 @import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,200;0,400;0,500;0,600;1,500&family=Roboto:wght@100;300;400;500;700&display=swap');
 
 :root {
     --primary: #ff3b5c;
@@ -25,8 +24,7 @@ html {
 }
 
 body {
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'ProximaNova', sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
     color: var(--text-color);
@@ -43,6 +41,31 @@ input,
 a[href] {
     color: var(--text-color);
     text-decoration: none;
+}
+
+// font embeded
+@font-face {
+    font-family: ProximaNova;
+    src: url('/assets/fonts/Proxima-Nova-Regular.woff2');
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: ProximaNova;
+    src: url('/assets/fonts/ProximaNova-Semibold.woff2');
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: ProximaNova;
+    src: url('/assets/fonts/Proxima-Nova-Bold.woff');
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: SofiaPro;
+    src: url('/assets/fonts/sofiapro-bold.woff2');
+    font-weight: 700;
 }
 
 // Custom tippy tooltips
