--- a/src/components/Layout/components/Header/header.module.scss
+++ b/src/components/Layout/components/Header/header.module.scss
@@ -20,84 +20,6 @@
     justify-content: space-between;
 }
 
-.search,
-.search-result {
-    width: 360px;
-}
-
-.search-title {
-    height: 30px;
-    padding: 5px 12px;
-    font-size: 1.6rem;
-    line-height: 20px;
-    font-weight: 600;
-    color: rgba(22, 24, 35, 0.5);
-}
-
-.search {
-    position: relative;
-    height: var(--search-height);
-    background-color: #f1f1f2;
-    border-radius: var(--search-boder-radius);
-    padding-left: 16px;
-    display: flex;
-    border: 1.5px solid transparent;
-
-    input {
-        flex: 1;
-        color: var(--black);
-        font-size: 1.6rem;
-        background-color: transparent;
-        height: 100%;
-        caret-color: var(--primary);
-    }
-
-    input:not(:placeholder-shown) ~ .search-btn {
-        color: rgba(22, 24, 35, 0.75);
-    }
-
-    &::after {
-        content: '';
-        position: absolute;
-        top: var(--search-top-spacer);
-        right: var(--search-button-width);
-        height: calc(var(--search-height) - var(--search-top-spacer) * 2);
-        width: 1px;
-        background-color: rgba(24, 24, 35, 0.12);
-    }
-
-    &:focus-within {
-        border-color: rgba(22, 24, 35, 0.2);
-    }
-}
-
-.clear,
-.loading {
-    position: absolute;
-    right: calc(var(--search-button-width) + 16px);
-    top: 50%;
-    transform: translateY(-50%);
-    color: rgba(22, 24, 35, 0.34);
-}
-
-.search-btn {
-    width: var(--search-button-width);
-    height: 100%;
-    border-top-right-radius: var(--search-boder-radius);
-    border-bottom-right-radius: var(--search-boder-radius);
-    font-size: 1.8rem;
-    color: rgba(22, 24, 35, 0.34);
-
-    &:hover {
-        background: rgba(22, 24, 35, 0.03);
-        cursor: pointer;
-    }
-
-    &:active {
-        background: rgba(22, 24, 35, 0.06);
-    }
-}
-
 //  Action
 .actions {
     display: flex;
@@ -108,8 +30,23 @@
     font-size: 2rem;
     color: #161823;
     background-color: transparent;
-    padding: 4px 12px;
+    padding: 4px 10px;
     cursor: pointer;
+    position: relative;
+}
+
+.badge {
+    position: absolute;
+    padding: 0px 6px;
+    font-size: 1.4rem;
+    height: 2rem;
+    line-height: 2rem;
+    font-family: 'ProximaNova';
+    top: -3px;
+    right: 0;
+    border-radius: 10px;
+    color: var(--white);
+    background-color: var(--primary);
 }
 
 .more-btn {
@@ -126,4 +63,5 @@
     object-fit: cover;
     border-radius: 50%;
     cursor: pointer;
+    margin-left: 12px;
 }
