--- a/src/components/AccountItem/AccountItem.module.scss
+++ b/src/components/AccountItem/AccountItem.module.scss
@@ -3,6 +3,7 @@
     align-items: center;
     padding: 0 0 8px 8px;
     cursor: pointer;
+    width: 100%;
 
     &:hover {
         background: rgba(22, 24, 35, 0.03);
