--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -7,6 +7,7 @@
     --black: #000;
     --white: #fff;
     --text-color: #16151f;
+    --font-family: 'ProximaNova', sans-serif;
 
     --default-layout-width-content: 1150px;
     --default-layout-width-horizontal-spacer: 24px;
@@ -24,7 +25,7 @@ html {
 }
 
 body {
-    font-family: 'ProximaNova', sans-serif;
+    font-family: var(--font-family);
     font-size: 1.6rem;
     line-height: 1.5;
     color: var(--text-color);
