--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -3,7 +3,8 @@
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
-    max-height: min((100vh - 70px) - 40px, 734px);
+    max-height: min((100vh - 96px) - 60px, 734px);
+    // max-height: min((100vh - 70px) - 40px, 734px);
     min-height: 120px;
     border-radius: 8px;
     padding-top: 8px;
