--- a/src/Layouts/components/Header/header.module.scss
+++ b/src/Layouts/components/Header/header.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
     --search-boder-radius: 92px;
-    --search-height: 46px;
+    --search-height: 60px;
     --search-top-spacer: 9px;
     --search-button-width: 52px;
 
@@ -23,16 +23,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-
-.logo-link {
-    display: flex;
+    padding-bottom: 6px;
 }
 
 //  Action
 .actions {
     display: flex;
-    align-items: center;
 }
 
 .action-btn {
